Stagger robo section point animations for sequential entrance

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         
         <!-- Desktop Questions - Left Side -->
         <div class="d-none d-md-block" style="position: absolute; left: 50px; top: 65%; transform: translateY(-50%); z-index: 10; opacity: 0; animation: slideInFromLeft 1s ease-out 3s forwards;">
-            <div class="mb-4" style="background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%); padding: 25px; border-radius: 20px; box-shadow: 0 12px 35px rgba(0,0,0,0.2); max-width: 380px; border: 2px solid #ffcc00; position: relative; overflow: hidden;">
+            <div class="mb-4 wow fadeInUp" data-wow-delay="0.5s" style="background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%); padding: 25px; border-radius: 20px; box-shadow: 0 12px 35px rgba(0,0,0,0.2); max-width: 380px; border: 2px solid #ffcc00; position: relative; overflow: hidden;">
                 <div style="position: absolute; top: -10px; right: -10px; width: 60px; height: 60px; background: linear-gradient(45deg, #ffcc00, #ffd700); border-radius: 50%; opacity: 0.1;"></div>
                 <div style="display: flex; align-items: center; gap: 15px;">
                     <div style="background: linear-gradient(45deg, #ffcc00, #ffd700); border-radius: 50%; width: 50px; height: 50px; display: flex; align-items: center; justify-content: center; box-shadow: 0 4px 15px rgba(255,204,0,0.4); flex-shrink: 0;">
@@ -113,7 +113,7 @@
                     </div>
                 </div>
             </div>
-            <div class="mb-4" style="background: linear-gradient(135deg, #ffcc00 0%, #ffd700 100%); padding: 25px; border-radius: 20px; box-shadow: 0 12px 35px rgba(255,204,0,0.3); max-width: 380px; border: 2px solid #ffffff; position: relative; overflow: hidden;">
+            <div class="mb-4 wow fadeInUp" data-wow-delay="1.0s" style="background: linear-gradient(135deg, #ffcc00 0%, #ffd700 100%); padding: 25px; border-radius: 20px; box-shadow: 0 12px 35px rgba(255,204,0,0.3); max-width: 380px; border: 2px solid #ffffff; position: relative; overflow: hidden;">
                 <div style="position: absolute; top: -15px; left: -15px; width: 80px; height: 80px; background: rgba(255,255,255,0.2); border-radius: 50%;"></div>
                 <div style="display: flex; align-items: center; gap: 15px;">
                     <div style="background: #000000; border-radius: 50%; width: 50px; height: 50px; display: flex; align-items: center; justify-content: center; box-shadow: 0 4px 15px rgba(255,204,0,0.4); flex-shrink: 0;">
@@ -129,26 +129,26 @@
         
         <!-- Desktop Questions - Right Side -->
         <div class="d-none d-md-block" style="position: absolute; right: 50px; top: 65%; transform: translateY(-50%); z-index: 10; opacity: 0; animation: slideInFromRight 1s ease-out 3.5s forwards;">
-            <div class="mb-4" style="background: linear-gradient(135deg, #ffcc00 0%, #ffd700 100%); padding: 25px; border-radius: 20px; box-shadow: 0 12px 35px rgba(255,204,0,0.3); max-width: 380px; border: 2px solid #ffffff; position: relative; overflow: hidden;">
+            <div class="mb-4 wow fadeInUp" data-wow-delay="1.5s" style="background: linear-gradient(135deg, #ffcc00 0%, #ffd700 100%); padding: 25px; border-radius: 20px; box-shadow: 0 12px 35px rgba(255,204,0,0.3); max-width: 380px; border: 2px solid #ffffff; position: relative; overflow: hidden;">
                 <div style="position: absolute; bottom: -20px; right: -20px; width: 100px; height: 100px; background: rgba(255,255,255,0.15); border-radius: 50%;"></div>
                 <div style="display: flex; align-items: center; gap: 15px;">
                     <div style="background: #000000; border-radius: 50%; width: 50px; height: 50px; display: flex; align-items: center; justify-content: center; box-shadow: 0 4px 15px rgba(255,204,0,0.4); flex-shrink: 0;">
                         <i class="fas fa-brain" style="color: #ffcc00; font-size: 20px;"></i>
                     </div>
                     <div>
-                        <p style="margin: 0; color: #000000; font-weight: 700; font-size: 1.2rem; line-height: 1.3;">Know AI is the future?</p>
+                        <p style="margin: 0; color: #000000; font-weight: 700; font-size: 1.2rem; line-height: 1.3;">If AI is the future, are you preparing for it today?</p>
                         <span style="color: #333; font-size: 0.9rem; font-weight: 500;">Agentic AI is everywhere! </span>
                     </div>
                 </div>
             </div>
-            <div class="mb-4" style="background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%); padding: 25px; border-radius: 20px; box-shadow: 0 12px 35px rgba(0,0,0,0.2); max-width: 380px; border: 2px solid #ffcc00; position: relative; overflow: hidden;">
+            <div class="mb-4 wow fadeInUp" data-wow-delay="2.0s" style="background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%); padding: 25px; border-radius: 20px; box-shadow: 0 12px 35px rgba(0,0,0,0.2); max-width: 380px; border: 2px solid #ffcc00; position: relative; overflow: hidden;">
                 <div style="position: absolute; top: -5px; left: -5px; width: 40px; height: 40px; background: linear-gradient(45deg, #ffcc00, #ffd700); border-radius: 50%; opacity: 0.2;"></div>
                 <div style="display: flex; align-items: center; gap: 15px;">
                     <div style="background: linear-gradient(45deg, #ffcc00, #ffd700); border-radius: 50%; width: 50px; height: 50px; display: flex; align-items: center; justify-content: center; box-shadow: 0 4px 15px rgba(255,204,0,0.4); flex-shrink: 0;">
                         <i class="fas fa-clock" style="color: #000000; font-size: 20px;"></i>
                     </div>
                     <div>
-                        <p style="margin: 0; color: #000000; font-weight: 700; font-size: 1.2rem; line-height: 1.3;">Idle for 100+ days?</p>
+                        <p style="margin: 0; color: #000000; font-weight: 700; font-size: 1.2rem; line-height: 1.3;">Why let systems stay idle for 100+ days?</p>
                         <span style="color: #666; font-size: 0.9rem; font-weight: 500;">Make them productive! </span>
                     </div>
                 </div>
@@ -475,7 +475,7 @@
         <div class="container" style="padding: 0 20px;">
             <div class="row g-3">
                 <div class="col-12">
-                    <div class="wow fadeInUp" data-wow-delay="0.1s" style="background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%); border-radius: 20px; padding: 25px; box-shadow: 0 8px 25px rgba(0,0,0,0.15); border: 2px solid #ffcc00; position: relative; overflow: hidden;">
+                    <div class="wow fadeInUp" data-wow-delay="0.5s" style="background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%); border-radius: 20px; padding: 25px; box-shadow: 0 8px 25px rgba(0,0,0,0.15); border: 2px solid #ffcc00; position: relative; overflow: hidden;">
                         <div style="position: absolute; top: -10px; right: -10px; width: 50px; height: 50px; background: linear-gradient(45deg, #ffcc00, #ffd700); border-radius: 50%; opacity: 0.1;"></div>
                         <div style="display: flex; align-items: center; gap: 15px;">
                             <div style="background: linear-gradient(45deg, #ffcc00, #ffd700); border-radius: 50%; width: 45px; height: 45px; display: flex; align-items: center; justify-content: center; box-shadow: 0 4px 15px rgba(255,204,0,0.4); flex-shrink: 0;">
@@ -489,7 +489,7 @@
                     </div>
                 </div>
                 <div class="col-12">
-                    <div class="wow fadeInUp" data-wow-delay="0.2s" style="background: linear-gradient(135deg, #ffcc00 0%, #ffd700 100%); border-radius: 20px; padding: 25px; box-shadow: 0 8px 25px rgba(255,204,0,0.25); border: 2px solid #ffffff; position: relative; overflow: hidden;">
+                    <div class="wow fadeInUp" data-wow-delay="1.0s" style="background: linear-gradient(135deg, #ffcc00 0%, #ffd700 100%); border-radius: 20px; padding: 25px; box-shadow: 0 8px 25px rgba(255,204,0,0.25); border: 2px solid #ffffff; position: relative; overflow: hidden;">
                         <div style="position: absolute; top: -5px; left: -5px; width: 40px; height: 40px; background: rgba(255,255,255,0.2); border-radius: 50%;"></div>
                         <div style="display: flex; align-items: center; gap: 15px;">
                             <div style="background: #000000; border-radius: 50%; width: 45px; height: 45px; display: flex; align-items: center; justify-content: center; box-shadow: 0 4px 15px rgba(255,204,0,0.25); flex-shrink: 0;">
@@ -503,7 +503,7 @@
                     </div>
                 </div>
                 <div class="col-12">
-                    <div class="wow fadeInUp" data-wow-delay="0.3s" style="background: linear-gradient(135deg, #ffcc00 0%, #ffd700 100%); border-radius: 20px; padding: 25px; box-shadow: 0 8px 25px rgba(255,204,0,0.25); border: 2px solid #ffffff; position: relative; overflow: hidden;">
+                    <div class="wow fadeInUp" data-wow-delay="1.5s" style="background: linear-gradient(135deg, #ffcc00 0%, #ffd700 100%); border-radius: 20px; padding: 25px; box-shadow: 0 8px 25px rgba(255,204,0,0.25); border: 2px solid #ffffff; position: relative; overflow: hidden;">
                         <div style="position: absolute; bottom: -15px; right: -15px; width: 60px; height: 60px; background: rgba(255,255,255,0.15); border-radius: 50%;"></div>
                         <div style="display: flex; align-items: center; gap: 15px;">
                             <div style="background: #000000; border-radius: 50%; width: 45px; height: 45px; display: flex; align-items: center; justify-content: center; box-shadow: 0 4px 15px rgba(255,204,0,0.25); flex-shrink: 0;">
@@ -517,7 +517,7 @@
                     </div>
                 </div>
                 <div class="col-12">
-                    <div class="wow fadeInUp" data-wow-delay="0.4s" style="background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%); border-radius: 20px; padding: 25px; box-shadow: 0 8px 25px rgba(0,0,0,0.15); border: 2px solid #ffcc00; position: relative; overflow: hidden;">
+                    <div class="wow fadeInUp" data-wow-delay="2.0s" style="background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%); border-radius: 20px; padding: 25px; box-shadow: 0 8px 25px rgba(0,0,0,0.15); border: 2px solid #ffcc00; position: relative; overflow: hidden;">
                         <div style="position: absolute; top: -8px; left: -8px; width: 35px; height: 35px; background: linear-gradient(45deg, #ffcc00, #ffd700); border-radius: 50%; opacity: 0.2;"></div>
                         <div style="display: flex; align-items: center; gap: 15px;">
                             <div style="background: linear-gradient(45deg, #ffcc00, #ffd700); border-radius: 50%; width: 45px; height: 45px; display: flex; align-items: center; justify-content: center; box-shadow: 0 4px 15px rgba(255,204,0,0.4); flex-shrink: 0;">
@@ -999,7 +999,7 @@
     </div>
 
     <!-- Enroll Section Start -->
-    <div class="container-fluid py-5" style="background: linear-gradient(135deg, #ffffff); position: relative;">
+    <div class="container-fluid py-5" style="background: linear-gradient(135deg, #f3efef); position: relative;">
         <div class="container" style="max-width: 700px;">
             <div class="text-center mb-4">
                 <div style="background: #ffcc00; color: #181818; display: inline-block; font-weight: 700; font-size: 1rem; padding: 8px 28px; border-radius: 30px; letter-spacing: 1px; margin-bottom: 18px;">LIMITED SEATS</div>
