Update navbar and favicon to SNS Group Logo, add closing quote icon to SNS Vision quote

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="SNS Institutions partners with Analytics Vidhya to offer industry-powered AI & ML education programs" name="description">
 
     <!-- Favicon -->
-    <link href="img/logo.png" rel="icon">
+    <link href="img/SNS Group Logo.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -69,7 +69,7 @@
     <div class="container-fluid p-0" style="background-color: #ffcc00; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3); position: fixed; top: 0; left: 0; right: 0; z-index: 1000;">
         <div class="navbar-container">
             <a href="index.html">
-                <img src="img/SNS-DT Logo.png" alt="SNS Institutions - Analytics Vidhya Partnership" class="logo-img">
+                <img src="img/SNS Group Logo.png" alt="SNS Institutions - Analytics Vidhya Partnership" class="logo-img">
             </a>
             
             <div class="nav-links" id="navLinks">
@@ -1040,6 +1040,7 @@
                 <div style="display: flex; align-items: flex-start; gap: 12px;">
                     <span style="color: #ffcc00; font-size: 1.5rem;"><i class="fas fa-quote-left"></i></span>
                     <span style="color: #fff; font-size: 1.15rem; font-style: italic;">Building entrepreneurial mindset using design thinking</span>
+                    <span style="color: #ffcc00; font-size: 1.5rem;"><i class="fas fa-quote-right"></i></span>
                 </div>
                 <div style="text-align: right; color: #bdbdbd; font-size: 1rem; margin-top: 8px;">- SNS Vision</div>
             </div>
