Clean up codebase: consolidate CSS files and remove unused images and libraries

--- a/index.html
+++ b/index.html
@@ -31,15 +31,6 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
     
-    <!-- Custom Color Overrides -->
-    <link href="css/custom-overrides.css" rel="stylesheet">
-    <!-- Program Lock CSS -->
-    <link href="css/program-lock.css" rel="stylesheet">
-    <!-- Robo Section Hover Effect -->
-    <link href="css/robo-hover.css" rel="stylesheet">
-    <!-- Section Divider CSS -->
-    <link href="css/section-divider.css" rel="stylesheet">
-    
     <style>
         .btn-outline-primary:hover {
             background-color: #000000 !important;
@@ -1018,7 +1009,7 @@
     </div>
 
     <!-- Enroll Section Start -->
-    <div class="container-fluid py-5" style="background: linear-gradient(135deg, #f3efef); position: relative;">
+    <div class="container-fluid py-5" style="background: linear-gradient(135deg, #ffffff); position: relative;">
         <div class="container" style="max-width: 700px;">
             <div class="text-center mb-4">
                 <div style="background: #ffcc00; color: #181818; display: inline-block; font-weight: 700; font-size: 1rem; padding: 8px 28px; border-radius: 30px; letter-spacing: 1px; margin-bottom: 18px;">LIMITED SEATS</div>
