Update WhatsApp number to 9584595835

--- a/index.html
+++ b/index.html
@@ -1381,7 +1381,7 @@
                         <a class="btn btn-sm btn-dark border-0" href="https://www.instagram.com/snsinstitutions?igsh=MW9idXFoaDE1OTRsZQ==" target="_blank" style="width: 36px; height: 36px; display: flex; align-items: center; justify-content: center; border-radius: 5px;"><i class="fab fa-instagram" style="color: #ffffff;"></i></a>
                     </div>
                     <p style="color: #666; font-size: 0.9rem; margin: 0;">
-                        <a href="mailto:info@snsinstitutions.com" style="color: #666; text-decoration: none;">info@snsinstitutions.com</a>
+                        <a href="mailto:info@snsinstitutions.com" style="color: #666; text-decoration: none;">eo1.cgc@snsgroups.com</a>
                     </p>
                 </div>
             </div>
@@ -1402,7 +1402,7 @@
     </div>
 
     <!-- Floating WhatsApp Button -->
-    <a class="floating-whatsapp-btn" href="https://wa.me/1234567890" target="_blank">
+    <a class="floating-whatsapp-btn" href="https://wa.me/919584595835" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
 
