--- a/index.html
+++ b/index.html
@@ -1397,9 +1397,9 @@
     <!-- Footer End -->
 
     <!-- Floating Enquiry Button -->
-    <div class="floating-enquiry-btn" data-bs-toggle="modal" data-bs-target="#enrollModal">
+    <a class="floating-enquiry-btn" href="tel:+919584595835">
         <i class="fas fa-phone"></i>
-    </div>
+    </a>
 
     <!-- Floating WhatsApp Button -->
     <a class="floating-whatsapp-btn" href="https://wa.me/919584595835" target="_blank">
