Add phone number to footer Connect section

--- a/index.html
+++ b/index.html
@@ -1383,6 +1383,9 @@
                     <p style="color: #666; font-size: 0.9rem; margin: 0;">
                         <a href="mailto:info@snsinstitutions.com" style="color: #666; text-decoration: none;">eo1.cgc@snsgroups.com</a>
                     </p>
+                    <p style="color: #666; font-size: 0.9rem; margin: 5px 0 0 0;">
+                        <a href="tel:+919584595835" style="color: #666; text-decoration: none;">+91 9584595835</a>
+                    </p>
                 </div>
             </div>
 
